[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["pac_led"]

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"
stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc", "ld", "rt"] }
