[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["anlang <2682525840@qq.com>"]
license = "MIT"

[workspace]
resolver = "3"
members = ["crates/*", "pac_led"]

[workspace.dependencies]
cortex-m-rt = "0.7.3"
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"
stm32f3xx-hal = { version = "0.10.0", features = [
    "stm32f303xc",
    "ld",
    "rt",
    "critical-section",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
