[package]
name = "pac_led"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { workspace = true }
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }
stm32f303pac = { path = "../crates/stm32f303pac", features = [
    "critical-section"
] }
